[package]
name = "external-actor"
version = "0.1.0"
build = "build.rs"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git" }
gcore = { git = "https://github.com/gear-tech/gear.git" }
codec = { package = "parity-scale-codec", version = "3.4.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
hashbrown = "0.13"

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git" }

[features]
debug = ["gstd/debug"]
default = ["std"]
std = []
